style: use inlined format args and bump MSRV
The `rust-version` field is added to Cargo.toml, and it is set to 1.58.
This is the version which introduces inline named format parameters.

This is not considered a breaking change
(https://github.com/rust-lang/api-guidelines/discussions/231).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 keywords = ["jwt", "nats", "nkey", "nkeys"]
 categories = ["api-bindings", "authentication"]
 repository = "https://github.com/AircastDev/nats-jwt"
+rust-version = "1.58"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
